--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -24,6 +24,9 @@ spec:
           imagePullPolicy: Always
           ports:
             - name: http
-              containerPort: 8081
+              containerPort: 80
+              protocol: TCP            
+            - name: https
+              containerPort: 443
               protocol: TCP
 
