--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -5,9 +5,9 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - name: http
-      port: 80
-      targetPort: 8081
+    - name: https
+      port: 443
+      targetPort: 443
       protocol: TCP
 
   selector:
